--- a/templates/main.html
+++ b/templates/main.html
@@ -83,7 +83,7 @@
             {% set genres = [
                 "All Genres", "Alt-Rock", "Ambient", "Black Metal", "Classical", "Contemporary Folk",
                 "Dance", "Electronic", "EDM", "Experimental", "Folk", "Hardcore Punk", "Hip-Hop",
-                "Indie Pop", "Jazz", "Metal", "Pop", "Pop-Rock", "Punk", "R&B", "Rock", "Trap-Rap"
+                "Indie Pop", "Indie Rock", "Jazz", "Metal", "Pop", "Pop-Rock", "Punk", "R&B", "Rock", "Trap-Rap"
             ] %}
             {% for genre in genres %}
             <label class="genre-item">
