nevermind mandopop got 0 albums #westernized

--- a/templates/main.html
+++ b/templates/main.html
@@ -451,7 +451,7 @@
                 {% set genres = [
                     "All Genres", "Alt-Rock", "Ambient", "Black Metal", "Classical", "Contemporary Folk",
                     "Dance", "Electronic", "EDM", "Experimental", "Folk", "Hardcore Punk", "Hip-Hop",
-                    "Indie Pop", "Indie Rock", "Jazz", "Metal", "Pop", "Pop-Rock", "Punk", "R&B", "Rock", "Trap-Rap", "Shoegaze", "Mandopop"
+                    "Indie Pop", "Indie Rock", "Jazz", "Metal", "Pop", "Pop-Rock", "Punk", "R&B", "Rock", "Trap-Rap", "Shoegaze"
                 ] %}
                 {% for genre in genres %}
                 <div class="genre-item" data-genre="{{ loop.index0 }}">
