--- a/templates/main.html
+++ b/templates/main.html
@@ -498,6 +498,8 @@ body.dark-mode .nav-link:hover {
         </form>
         {% if selected_options %}
         <div class="result-card">
+            <h3> You might like: </h3>
+            <br>
             <img src="/image?url={{ result['cover'] | urlencode }}" alt="Album cover" class="album-art">
             <h2 class="album-title">{{ result["name"] }}</h2>
             <div class="album-info">
