--- a/templates/from_album.html
+++ b/templates/from_album.html
@@ -518,6 +518,7 @@ body.dark-mode .nav-link:hover {
     <nav class="nav-links">
         <a href="/" class="nav-link">Home</a>
         <a href="/album" class="nav-link">Discover by Album</a>
+        <a href="/playlist" class="nav-link">Recommend from Playlist</a>
     </nav>
 </header>
     <div class = "container">
